--- a/Source/pages/myaccount/myaccount.wxml
+++ b/Source/pages/myaccount/myaccount.wxml
@@ -9,7 +9,7 @@
 <view class='flex-1 h4-5 padding-bottom-10'>手机号</view>
 
 <view class='flex-3  padding-left-10 padding-bottom-10 flex-row flex-center'>
-<input class='h5 txt-black' placeholder='点击绑定手机' disabled='false' bindgetphonenumber='getPhoneNo' open-type='getPhoneNumber' value='{{mobile}}' ></input>
-<button class='h6' style='width:220rpx;' size='mini' bindgetphonenumber='getPhoneNo' open-type='getPhoneNumber'>获取手机</button></view>
+<input class='h5 txt-black' placeholder='点击绑定手机' disabled='false' bindgetphonenumber='getPhoneNo' open-type='getPhoneNumber' value='{{memberinfo.mobile}}' ></input>
+<button class='h6' style='width:220rpx;' size='mini' wx:if="{{memberinfo.mobile==''}}"  bindgetphonenumber='getPhoneNo' open-type='getPhoneNumber'>获取手机</button></view>
 </view>
 </view>
